--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "react-icons": "^4.8.0"
+        "react-icons": "^4.8.0",
+        "swiper": "^9.1.0"
     }
 }
