--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-icons": "^4.8.0",
         "react-slick": "^0.29.0",
         "slick-carousel": "^1.8.1",
+        "sweetalert": "^2.1.2",
         "swiper": "^9.1.0"
     }
 }
