--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "react-icons": "^4.8.0",
+        "react-paginate": "^8.1.4",
         "react-slick": "^0.29.0",
         "slick-carousel": "^1.8.1",
         "swiper": "^9.1.0"
